--- a/web/package.json
+++ b/web/package.json
@@ -12,15 +12,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.3.0",
     "graphql": "^15.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^9.1.3",
     "sanitize-html": "^2.4.0",
+    "sass": "^1.63.6",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.1.2"
