--- a/web/package.json
+++ b/web/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@mui/material": "^5.14.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -16,10 +19,12 @@
     "graphql": "^15.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-avatar-editor": "^13.0.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.9.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^9.1.3",
