--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,7 @@
     "react-hook-form": "^7.9.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "sanitize-html": "^2.4.0",
     "sass": "^1.63.6",
@@ -35,7 +35,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
