--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.3.0",
+    "eslint": "^8.51.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "graphql": "^15.5.0",
+    "lint-staged": "^15.0.1",
+    "prettier": "^3.0.3",
+    "prettier-config-nick": "^1.0.8",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-avatar-editor": "^13.0.0",
@@ -38,14 +44,24 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write .",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": "error",
+      "react/jsx-no-target-blank": "off"
+    }
   },
+  "prettier": "prettier-config-nick",
   "browserslist": {
     "production": [
       ">0.2%",
