avatar upload update

--- a/web/package.json
+++ b/web/package.json
@@ -58,7 +58,12 @@
       "prettier"
     ],
     "rules": {
-      "prettier/prettier": "error",
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ],
       "react/jsx-no-target-blank": "off",
       "semi": "off"
     }
