--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.0.1",
     "graphql": "^15.5.0",
+    "graphql-ws": "^5.11.3",
     "lint-staged": "^15.0.1",
     "prettier": "^3.0.3",
     "prettier-config-nick": "^1.0.8",
@@ -39,7 +40,7 @@
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.1.2",
-    "graphql-ws": "^5.11.3"
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "prettier --write . && react-scripts start",
