--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.9.0",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
