--- a/.github/workflows/bibinto_front_ci.yaml
+++ b/.github/workflows/bibinto_front_ci.yaml
@@ -45,4 +45,4 @@ jobs:
             # Запустить скрипт
             chmod +x front.sh  # сделать скрипт исполняемым, если это необходимо
             bash front.sh
-            echo "Скрипт front.sh завершен."
+            echo "Деплой успешен"
