--- a/.github/workflows/bibinto_front_ci.yaml
+++ b/.github/workflows/bibinto_front_ci.yaml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
       # appleboy/ssh-action — это действие, которое
       # позволяет выполнять SSH-команды на удалённых
       # серверах. Оно часто используется для
