--- a/.github/workflows/bibinto_front_ci.yaml
+++ b/.github/workflows/bibinto_front_ci.yaml
@@ -40,7 +40,7 @@ jobs:
               rm -rf bibintoApp-frontend
             fi
 
-            git clone git@github.com:force278/bibintoApp-frontend.git
+            git clone https://github.com/force278/bibintoApp-frontend.git
 
             # Синхронизировать файлы
             rsync -avz --delete bibintoApp-frontend/web/ /home/bibinto_front/
