--- a/.github/workflows/bibinto_front_ci.yaml
+++ b/.github/workflows/bibinto_front_ci.yaml
@@ -43,7 +43,7 @@ jobs:
             git clone git@github.com:force278/bibintoApp-frontend.git
 
             # Синхронизировать файлы
-            rsync -avz --delete bibintoApp-frontend/web/ /home/bibinto_front/
+            rsync -avzbibintoApp-frontend/web/ /home/bibinto_front/
 
             # Запустить скрипт
             chmod +x front.sh  # сделать скрипт исполняемым, если это необходимо
