--- a/.github/workflows/bibinto_front_ci.yaml
+++ b/.github/workflows/bibinto_front_ci.yaml
@@ -13,8 +13,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      # actions/checkout — это стандартная GitHub Action,
+      # которая используется для извлечения (checkout) кода
+      # из репозитория. Она позволяет вам получить доступ к
+      # коду вашего проекта, чтобы вы могли выполнять
+      # сборку, тестирование или любые другие действия с
+      # ним в ходе рабочего процесса (workflow).
+
+      # @v3 — это версия действия. В данном случае это
+      # третья версия actions/checkout. Указывая версию,
+      # вы обеспечиваете стабильность и предсказуемость,
+      # так как не будете автоматически получать обновления
+      # (возможно, с изменением поведения) при изменении
+      # более новых версий этого действия.
+
+      # Когда вы добавляете этот шаг в ваш файл конфигурации
+      # рабочего процесса GitHub Actions, вы обеспечиваете,
+      # что код вашего репозитория будет доступен для
+      # дальнейших шагов в процессе сборки или тестирования.
+      - name: Checkout master
+        uses: actions/checkout@v3
       # appleboy/ssh-action — это действие, которое
       # позволяет выполнять SSH-команды на удалённых
       # серверах. Оно часто используется для
