--- a/.github/workflows/bibinto_front_ci.yaml
+++ b/.github/workflows/bibinto_front_ci.yaml
@@ -61,7 +61,7 @@ jobs:
             git clone git@github.com:force278/bibintoApp-frontend.git
 
             # Синхронизировать файлы
-            rsync -avz bibintoApp-frontend/web/ /home/bibinto_front/
+            rsync -avz bibintoApp-frontend/ /home/bibinto_front/
 
             # Запустить скрипт
             chmod +x front.sh  # сделать скрипт исполняемым, если это необходимо
