--- a/.github/workflows/bibinto_front_ci.yaml
+++ b/.github/workflows/bibinto_front_ci.yaml
@@ -13,26 +13,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # actions/checkout — это стандартная GitHub Action,
-      # которая используется для извлечения (checkout) кода
-      # из репозитория. Она позволяет вам получить доступ к
-      # коду вашего проекта, чтобы вы могли выполнять
-      # сборку, тестирование или любые другие действия с
-      # ним в ходе рабочего процесса (workflow).
-
-      # @v3 — это версия действия. В данном случае это
-      # третья версия actions/checkout. Указывая версию,
-      # вы обеспечиваете стабильность и предсказуемость,
-      # так как не будете автоматически получать обновления
-      # (возможно, с изменением поведения) при изменении
-      # более новых версий этого действия.
-
-      # Когда вы добавляете этот шаг в ваш файл конфигурации
-      # рабочего процесса GitHub Actions, вы обеспечиваете,
-      # что код вашего репозитория будет доступен для
-      # дальнейших шагов в процессе сборки или тестирования.
+      # Стандартная GitHub Action для извлечения кода из репозитория
       - name: Checkout master
         uses: actions/checkout@v3
+
+      # Настройка SSH для доступа к приватному репозиторию
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSHKEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+
       # appleboy/ssh-action — это действие, которое
       # позволяет выполнять SSH-команды на удалённых
       # серверах. Оно часто используется для
